Fixed overflow bug on navbar

--- a/src/components/Navbar/Activated.module.css
+++ b/src/components/Navbar/Activated.module.css
@@ -84,6 +84,9 @@
 #dayContent {
   text-align: center;
   margin-top: 2rem;
+  padding-right: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .day {
@@ -169,6 +172,7 @@
     .row {
         margin-top: 0px;
         margin-bottom: 0px;
+        max-width: 100%;
     }
 }
 
